@@ -1,6 +1,6 @@
 ##########################################################################
 #
-#  Copyright (c) 2010-2012, Image Engine Design Inc. All rights reserved.
+#  Copyright (c) 2010-2013, Image Engine Design Inc. All rights reserved.
 #
 #  Redistribution and use in source and binary forms, with or without
 #  modification, are permitted provided that the following conditions are
@@ -74,20 +74,70 @@ class TestInterpolatedCacheReader( IECoreHoudini.TestCase ):
 		self.assertNotEqual( orig['Cd'], result['Cd'] )
 		self.assertEqual( orig['pointId'], result['pointId'] )
 	
-	def testFrameMultiplier( self ) :
+	def testSubFrameData( self ) :
 		cache = self.cacheSop()
 		self.failUnless( isinstance( cache.geometry(), hou.Geometry ) )
-		cache.parm( "frameMultiplier" ).set( 250 )
+		cache.parm( "samplesPerFrame" ).set( 1 )
+		cache.parm( "interpolation" ).set( IECore.InterpolatedCache.Interpolation.Linear )
+		hou.setFrame( 1 )
+		cache.cook( force=True )
+		self.assertEqual( len(cache.geometry().points()), 100 )
+		pos1 = cache.geometry().points()[0].position()
+		hou.setFrame( 2 )
+		cache.cook( force=True )
+		self.assertEqual( len(cache.geometry().points()), 100 )
+		pos2 = cache.geometry().points()[0].position()
+		self.assertNotEqual( pos1, pos2 )
+		hou.setFrame( 1.8 )
+		cache.cook( force=True )
+		self.assertEqual( len(cache.geometry().points()), 100 )
+		
+		# samplesPerFrame 1 ignores the file that exists for 1.8, and linear interpolation blends 1 and 2
+		pos18 = cache.geometry().points()[0].position()
+		self.assertNotEqual( pos18, pos1 )
+		self.assertNotEqual( pos18, pos2 )
+		self.failUnless( pos18.isAlmostEqual( pos1*0.2 + pos2*0.8 ) )
+		
+		# samplesPerFrame 2 doesn't have the correct files on disk
+		cache.parm( "samplesPerFrame" ).set( 2 )
 		cache.cook( force=True )
 		self.failUnless( cache.warnings() )
 		self.assertEqual( len(cache.geometry().points()), 0 )
-		shutil.copyfile( "test/IECoreHoudini/data/torusVertCache.0001.fio", "test/IECoreHoudini/data/torusVertCache.0250.fio" )
-		# need to refresh the LRUCache in order to get passed the original error
-		cache.parm( "frameMultiplier" ).set( 1 )
-		cache.cook()
-		cache.parm( "frameMultiplier" ).set( 250 )
-		self.assertEqual( len(cache.geometry().points()), 100 )
-		os.remove( "test/IECoreHoudini/data/torusVertCache.0250.fio" )
+		
+		# samplesPerFrame 1 ignores the file that exists for 1.8, and no interpolation chooses frame 1
+		cache.parm( "samplesPerFrame" ).set( 1 )
+		cache.parm( "interpolation" ).set( IECore.InterpolatedCache.Interpolation.None )
+		cache.cook( force=True )
+		pos18 = cache.geometry().points()[0].position()
+		self.assertEqual( pos18, pos1 )
+		self.assertNotEqual( pos18, pos2 )
+		
+		# samplesPerFrame 1 ignores the file that exists for 1.8, and cubic interpolation can't find the necessary files
+		cache.parm( "interpolation" ).set( IECore.InterpolatedCache.Interpolation.Cubic )
+		cache.cook( force=True )
+		self.failUnless( cache.warnings() )
+		self.assertEqual( len(cache.geometry().points()), 0 )
+		
+		# samplesPerFrame 5 uses the file for 1.8 for linear and no interpolation
+		cache.parm( "samplesPerFrame" ).set( 5 )
+		cache.parm( "interpolation" ).set( IECore.InterpolatedCache.Interpolation.Linear )
+		cache.cook( force=True )
+		pos18 = cache.geometry().points()[0].position()
+		self.assertNotEqual( pos18, pos1 )
+		# this is true because the 1.8 file is an exact copy of frame 2
+		self.assertEqual( pos18, pos2 )
+		cache.parm( "interpolation" ).set( IECore.InterpolatedCache.Interpolation.None )
+		cache.cook( force=True )
+		pos18 = cache.geometry().points()[0].position()
+		self.assertNotEqual( pos18, pos1 )
+		self.assertEqual( pos18, pos2 )
+		
+		# samplesPerFrame 5 has enough surrounding files for cubic
+		cache.parm( "interpolation" ).set( IECore.InterpolatedCache.Interpolation.Cubic )
+		cache.cook( force=True )
+		pos18 = cache.geometry().points()[0].position()
+		self.assertNotEqual( pos18, pos1 )
+		self.assertEqual( pos18, pos2 )
 	
 	def testNonExistantFile( self ) :
 		cache = self.cacheSop()
@@ -192,7 +242,7 @@ class TestInterpolatedCacheReader( IECoreHoudini.TestCase ):
 		orig = IECoreHoudini.FromHoudiniPolygonsConverter( cache ).convert()
 		hou.setFrame( 2.5 )
 		self.assertEqual( cache.geometry(), None )
-		self.failUnless( "FileIndexedIO: Entry not found" in cache.errors() )
+		self.failUnless( "Entry not found" in cache.errors() )
 		hou.setFrame( 3 )
 		result = IECoreHoudini.FromHoudiniPolygonsConverter( cache ).convert()
 		self.failUnless( isinstance( cache.geometry(), hou.Geometry ) )
@@ -245,7 +295,7 @@ class TestInterpolatedCacheReader( IECoreHoudini.TestCase ):
 		merge = cache.inputs()[0].createOutputNode( "merge" )
 		merge.setInput( 1, group )
 		cache.setInput( 0, merge )
-		i = IECore.InterpolatedCache( cache.parm( "cacheSequence" ).eval(), IECore.InterpolatedCache.Interpolation.Linear, IECore.OversamplesCalculator( 24, 1, 24 ) )
+		i = IECore.InterpolatedCache( cache.parm( "cacheSequence" ).eval(), IECore.InterpolatedCache.Interpolation.Linear, IECore.OversamplesCalculator( 24, 1 ) )
 		self.assert_( "notData" in i.attributes( 3, 'badObject' ) )
 		result = IECoreHoudini.FromHoudiniPolygonsConverter( cache ).convert()
 		self.assert_( "notData" not in result )
@@ -261,7 +311,7 @@ class TestInterpolatedCacheReader( IECoreHoudini.TestCase ):
 		merge = cache.inputs()[0].createOutputNode( "merge" )
 		merge.setInput( 1, group )
 		cache.setInput( 0, merge )
-		i = IECore.InterpolatedCache( cache.parm( "cacheSequence" ).eval(), IECore.InterpolatedCache.Interpolation.Linear, IECore.OversamplesCalculator( 24, 1, 24 ) )
+		i = IECore.InterpolatedCache( cache.parm( "cacheSequence" ).eval(), IECore.InterpolatedCache.Interpolation.Linear, IECore.OversamplesCalculator( 24, 1 ) )
 		self.assert_( "splineColor4fData" in i.attributes( 3, 'badObject' ) )
 		result = IECoreHoudini.FromHoudiniPolygonsConverter( cache ).convert()
 		self.assert_( "splineColor4fData" not in result )
@@ -305,7 +355,7 @@ class TestInterpolatedCacheReader( IECoreHoudini.TestCase ):
 		self.assertEqual( orig['Cd'], result['Cd'] )
 		self.assertEqual( orig['pointId'], result['pointId'] )
 		
-		i = IECore.InterpolatedCache( cache.parm( "cacheSequence" ).eval(), IECore.InterpolatedCache.Interpolation.Linear, IECore.OversamplesCalculator( 24, 1, 24 ) )
+		i = IECore.InterpolatedCache( cache.parm( "cacheSequence" ).eval(), IECore.InterpolatedCache.Interpolation.Linear, IECore.OversamplesCalculator( 24, 1 ) )
 		matrix = i.read( 2, "torus", "transform" ).value.transform
 		origP = orig["P"].data
 		resultP = result["P"].data
@@ -329,7 +379,7 @@ class TestInterpolatedCacheReader( IECoreHoudini.TestCase ):
 		self.assertEqual( orig['Cd'], result['Cd'] )
 		self.assertEqual( orig['pointId'], result['pointId'] )
 		
-		i = IECore.InterpolatedCache( cache.parm( "cacheSequence" ).eval(), IECore.InterpolatedCache.Interpolation.Linear, IECore.OversamplesCalculator( 24, 1, 24 ) )
+		i = IECore.InterpolatedCache( cache.parm( "cacheSequence" ).eval(), IECore.InterpolatedCache.Interpolation.Linear, IECore.OversamplesCalculator( 24, 1 ) )
 		matrix = i.read( 2, "torus", "transform" ).value.transform
 		origP = orig["P"].data
 		origN = orig["N"].data
